Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29698

error in MSVC incremental link command

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.2
    • 5.0.0
    • Build tools: qmake
    • None
    • Windows, MSVC
    • 37e4e33c501da8c4acd2376b3341d4f79c9d87ce

    Description

      On some Windows installations Qt's configure fails with the error message

      NMAKE : fatal error U1077: 'if' : return code '0x2'
      

      after building qmake.

      The culprit is in the generated Makefile of config.tests/arch

      if not exist $(DESTDIR_TARGET) del arch.exe.embed.manifest>NUL 2>&1
      

      On some machines del exits with an error code.
      In those cases the build will fail.

      We must not rely on del never setting ERRORLEVEL.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            jbornema Joerg Bornemann
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes